# Space_stations_API

./: README.md  pytest.ini
space_stations/: Dockerfile  docker-compose.yml  pyproject.toml
space_stations/api/: serializers.py  urls.py  utils.py  views.py
space_stations/space_stations/: settings.py  urls.py
space_stations/stations/: admin.py  models.py
space_stations/stations/migrations/: 0001_initial.py  0002_initial.py
space_stations/users/: admin.py  urls.py
space_stations/users/migrations/: 0001_initial.py
tests/: test_models.py  test_views.py
tests/fixtures/: fixture_data.py  fixture_user.py
